BIG Opsiees + benchmark configs and automation

--- a/benchmarks/fedporx.ipynb
+++ b/benchmarks/fedporx.ipynb
@@ -47,8 +47,11 @@
    "source": [
     "from fluke.data import DataSplitter\n",
     "splitter = DataSplitter(dataset=dataset,\n",
-    "                        distribution=\"iid\") #fedprox works best with a non-iid distribution but this can be achieved by reducing the batch size and \n",
-    "                                            #increasing the number of clients and eligible clients"
+    "                        distribution=\"iid\",\n",
+    "                        client_split=0.03,\n",
+    "                        sampling_perc=1) #fedprox works best with a non-iid distribution but this can be achieved by reducing the batch size and \n",
+    "                                            #increasing the number of clients and eligible clients, \n",
+    "                                            # the experiment calls for 2 digits per client and that equals to 0.03 of the dataset"
    ]
   },
   {
