--- a/benchmarks/fedavg.ipynb
+++ b/benchmarks/fedavg.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We try to reproduce the results of the paper [Federated Optimization in Heterogeneous Networks](https://arxiv.org/abs/1812.06127) on the MNIST dataset. The paper introduces a new algorithm called FedProx, which is a Federated Averaging algorithm with a proximal term added to the loss function to encourage the local models to be close to each other. The algorithm is tested on the MNIST dataset with a [MNIST_LR](../fluke/nets.py:549)(a simple logistic regression model). The paper shows that FedProx outperforms FedAvg in terms of convergence speed and accuracy."
+    "We try to reproduce the results of the paper [Communication-Efficient Learning of Deep Networks from Decentralized Data](http://arxiv.org/abs/1602.05629) on the MNIST dataset. The paper introduces Federatad Learning as a concept with it's first implementation Federated Averaging. The algorithm is tested on the MNIST dataset with [MNIST_2NN](../fluke/nets.py:287)(a simple 2-layer perceptron)."
    ]
   },
   {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from fluke.data import DataSplitter\n",
     "splitter = DataSplitter(dataset=dataset,\n",
-    "                        distribution=\"iid\")"
+    "                        distribution=\"iid\",\n",
+    "                        client_split=0.2,\n",
+    "                        sampling_perc=1)"
    ]
   },
   {
@@ -58,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,11 +88,10 @@
     "\n",
     "client_hp = DDict(\n",
     "    batch_size=10,\n",
-    "    local_epochs=50,\n",
+    "    local_epochs=5,\n",
     "    loss=\"CrossEntropyLoss\",\n",
-    "    mu=1,\n",
     "    optimizer=DDict(\n",
-    "      lr=0.03),\n",
+    "      lr=0.1),\n",
     "    scheduler=DDict(\n",
     "      gamma=1,\n",
     "      step_size=1)\n",
@@ -99,17 +100,17 @@
     "alg_hp = DDict(\n",
     "    client = client_hp,\n",
     "    server=DDict(weighted=True),\n",
-    "    model=\"MNIST_LR\")"
+    "    model=\"MNIST_2NN\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fluke.algorithms.fedprox import FedProx\n",
-    "algorithm = FedProx(1000, splitter, alg_hp)"
+    "from fluke.algorithms.fedavg import FedAVG\n",
+    "algorithm = FedAVG(100, splitter, alg_hp)"
    ]
   },
   {
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "algorithm.run(40, 0.01)"
+    "algorithm.run(100, 0.2)"
    ]
   }
  ],
@@ -163,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
