--- a/benchmarks/fedprox.ipynb
+++ b/benchmarks/fedprox.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We try to reproduce the results of the paper [Federated Optimization in Heterogeneous Networks](https://arxiv.org/abs/1812.06127) on the MNIST dataset. The paper introduces a new algorithm called FedProx, which is a Federated Averaging algorithm with a proximal term added to the loss function to encourage the local models to be close to each other. The algorithm is tested on the MNIST dataset with a [MNIST_LR](../fluke/nets.py:549)(a simple logistic regression model). The paper shows that FedProx outperforms FedAvg in terms of convergence speed and accuracy."
+    "We try to reproduce the results of the paper [Federated Optimization in Heterogeneous Networks](https://openreview.net/pdf?id=SkgwE5Ss3N) on the MNIST dataset. The paper introduces a new algorithm called FedProx, which is a Federated Averaging algorithm with a proximal term added to the loss function to encourage the local models to be close to each other. The algorithm is tested on the MNIST dataset with a [MNIST_LR](../fluke/nets.py:549)(a simple logistic regression model). The paper shows that FedProx outperforms FedAvg in terms of convergence speed and accuracy."
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,8 @@
     "from fluke import GlobalSettings\n",
     "\n",
     "evaluator = ClassificationEval(1,n_classes=dataset.num_classes)\n",
-    "GlobalSettings().set_evaluator(evaluator)"
+    "GlobalSettings().set_evaluator(evaluator)\n",
+    "GlobalSettings().set_device(\"cuda\")"
    ]
   },
   {
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +94,7 @@
     "    batch_size=10,\n",
     "    local_epochs=50,\n",
     "    loss=\"CrossEntropyLoss\",\n",
-    "    mu=1,\n",
+    "    mu=1,#overall best obtained from grid search \n",
     "    optimizer=DDict(\n",
     "      lr=0.03),\n",
     "    scheduler=DDict(\n",
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +155,13 @@
    "source": [
     "algorithm.run(400, 0.01)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have a global target accuracy of ~0.85, our implementation of FedProx achieves a final accuracy of 0.90"
+   ]
   }
  ],
  "metadata": {
@@ -172,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
